# Water2Wires

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BUGFIXES_APPLIED.md  FINAL_VERIFICATION.md  GITHUB_SETUP.md  LAUNCH_READINESS.md  QUICKSTART.md  README.md  SECURITY_AND_TESTING_REPORT.md  SETUP.md  STRUCTURE.md  TESTING_GUIDE.md  build.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start-water2wires.bat  tailwind.config.js  vite.config.js
