[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water2wires"
version = "1.0.0"
description = "Professional Data Recovery Application"
requires-python = ">=3.10"
dependencies = [
    "pytsk3>=20210419",
    "pyewf>=20210508",
    "construct>=2.10.70",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.0",
    "Pillow>=10.0.0",
    "PyPDF2>=3.0.0",
    "mutagen>=1.47.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "mypy>=1.5.0",
]
windows = [
    "pywin32>=306",
    "wmi>=1.5.1",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

